glFusion ChangeLog

v1.1.0
------------
- BB2 Update - eliminated redundant hits to vars table (Joe)
- Added $_CONF['hide_adminmenu'] (Joe)
- Added ability for plugins to control moderation queue by returning a string from plugin_itemlist_
  No other moderation functions will be called is a string is returned. (Joe)
- Separated Command and Control from Submissions page in admin (Joe)
- Removed non-english language files from install tarball (will be separate download) (Eric)
- Updated look of site footer to support a Site Tailor footer menu (Eric)
- Moved the Nouveau javascript widget files so they can be used by any theme (Eric)
- Added /custom directories to all the private/plugin/templates/ .thtml files (Eric)
- Implemented the advanced editor for Contact User and Email Story (Mark)
- FileMgmt: Fixed a bug that caused the broken file reporting to not work (Mark)
- Added logview feature to moderation screen (Mark)
- Added jhead / jpegtrans configuration options (Mark)
- Added timezone select list in configuration (Mark)
- Updated Bad Behavior2 to v2.0.23 (Mark)
- Updated look of default poll vote results. (Eric)
- Updated .sql on default install and preliminary .sql prep for mssql support. (Eric)
- Moved and updated Terms of Use and Privacy Policy so they can be theme independent. (Eric)
- Removed orphan images from tarball. (Eric)
- Implemented feature to auto close / edit comments for articles (Mark)
- Microsummaries support for topics fixed. (Mark)
- Fixed hard coded table name in lib-security (Mark).
- Handle HTML properly for config item in configuration (Mark).
- Polls Plugin - Now if multiple questions make button read
  'Start Poll' instead of vote (Mark)
- Implemented PHPMailer into core (Mark)
- Moved PHPMailer to lib/ from Media Gallery (Mark)
- Moved stringparser_bbcode.* to lib/ from Forum plugin (Mark)
- Moved getID3 to lib/ from Media Gallery (Mark)
- New lib-image.php - image processing APIs from Media Gallery (Mark)