@@ -29,7 +29,7 @@
 
 <!-- BEGIN unset-param -->
 <tr><td class="key">{display_name} {doc_link}</td>
-<td><a href="#" onclick="restore('{name}');">{lang_restore}</a></td>
+<td><a href="#" onclick="restore('{name}');">{lang_enable}</a></td>
 </tr>
 <!-- END unset-param -->
 
