@@ -105,21 +105,19 @@ $_CONF = $config->get_config('Core');
 
 // Before we do anything else, check to ensure site is enabled
 
-if( isset( $_CONF['site_enabled'] ) && !$_CONF['site_enabled'] )
-{
-    if( empty( $_CONF['site_disabled_msg'] ))
-    {
-        echo $_CONF['site_name'] . ' is temporarily down.  Please check back soon';
-    }
-    else
-    {
+if (isset($_CONF['site_enabled']) && !$_CONF['site_enabled']) {
+
+    if (empty($_CONF['site_disabled_msg'])) {
+        header("HTTP/1.1 503 Service Unavailable");
+        header("Status: 503 Service Unavailable");
+        echo $_CONF['site_name'] . ' is temporarily down.  Please check back soon.';
+    } else {
         // if the msg starts with http: assume it's a URL we should redirect to
-        if( preg_match( "/^(https?):/", $_CONF['site_disabled_msg'] ) === 1 )
-        {
-            echo COM_refresh( $_CONF['site_disabled_msg'] );
-        }
-        else
-        {
+        if (preg_match("/^(https?):/", $_CONF['site_disabled_msg']) === 1) {
+            echo COM_refresh($_CONF['site_disabled_msg']);
+        } else {
+            header("HTTP/1.1 503 Service Unavailable");
+            header("Status: 503 Service Unavailable");
             echo $_CONF['site_disabled_msg'];
         }
     }
@@ -469,15 +467,16 @@ else
 *
 * @param        string      $blockname      corresponds to name field in block table
 * @param        string      $which          can be either 'header' or 'footer' for corresponding template
+* @param        string      $position       can be 'left', 'right' or blank. If set, will be used to find a side specific override template.
 * @see function COM_startBlock
 * @see function COM_endBlock
 * @see function COM_showBlocks
 * @see function COM_showBlock
 * @return   string  template name
 */
-function COM_getBlockTemplate( $blockname, $which )
+function COM_getBlockTemplate( $blockname, $which, $position='' )
 {
-    global $_BLOCK_TEMPLATE, $_COM_VERBOSE;
+    global $_BLOCK_TEMPLATE, $_COM_VERBOSE, $_CONF;
 
     if( $_COM_VERBOSE )
     {
@@ -519,6 +518,21 @@ function COM_getBlockTemplate( $blockname, $which )
         else
         {
             $template = 'blockfooter.thtml';
+        }
+    }
+
+    // If we have a position specific request, and the template is not already
+    // position specific then look to see if there is a position specific
+    // override.
+    $templateLC = strtolower($template);
+    if( !empty($position) && ( strpos($templateLC, $position) === false ) )
+    {
+        // Trim .thtml from the end.
+        $positionSpecific = substr($template, 0, strlen($template) - 6);
+        $positionSpecific .= '-' . $position . '.thtml';
+        if( file_exists( $_CONF['path_layout'] . $positionSpecific ) )
+        {
+            $template = $positionSpecific;
         }
     }
 
@@ -2244,11 +2258,12 @@ function COM_showTopics( $topic='' )
 *
 * @param        string      $help       Help file to show
 * @param        string      $title      Title of Menu
+* @param        string      $position   Side being shown on 'left', 'right'. Though blank works not likely.
 * @see function COM_adminMenu
 *
 */
 
-function COM_userMenu( $help='', $title='' )
+function COM_userMenu( $help='', $title='', $position='' )
 {
     global $_TABLES, $_USER, $_CONF, $LANG01, $LANG04, $LANG29, $_BLOCK_TEMPLATE;
 
@@ -2284,7 +2299,7 @@ function COM_userMenu( $help='', $title='' )
         $thisUrl = COM_getCurrentURL();
 
         $retval .= COM_startBlock( $title, $help,
-                           COM_getBlockTemplate( 'user_block', 'header' ));
+                           COM_getBlockTemplate( 'user_block', 'header', $position ));
         $retval .= '<ul>';
 
         $plugin_options = PLG_getAdminOptions();
@@ -2357,7 +2372,7 @@ function COM_userMenu( $help='', $title='' )
     else
     {
         $retval .= COM_startBlock( $LANG01[47], $help,
-                           COM_getBlockTemplate( 'user_block', 'header' ));
+                           COM_getBlockTemplate( 'user_block', 'header', $position ));
         $login = new Template( $_CONF['path_layout'] );
         $login->set_file( 'form', 'loginform.thtml' );
         $login->set_var( 'xhtml', XHTML );
@@ -2426,7 +2441,7 @@ function COM_userMenu( $help='', $title='' )
         }
 
         $retval .= $login->parse( 'output', 'form' );
-        $retval .= COM_endBlock( COM_getBlockTemplate( 'user_block', 'footer' ));
+        $retval .= COM_endBlock( COM_getBlockTemplate( 'user_block', 'footer', $position ));
     }
 
     return $retval;
@@ -2440,21 +2455,22 @@ function COM_userMenu( $help='', $title='' )
 *
 * @param        string      $help       Help file to show
 * @param        string      $title      Menu Title
+* @param        string      $position   Side being shown on 'left', 'right' or blank.
 * @see function COM_userMenu
 *
 */
 
-function COM_adminMenu( $help = '', $title = '' )
+function COM_adminMenu( $help = '', $title = '', $position = '' )
 {
     global $_TABLES, $_USER, $_CONF, $LANG01, $_BLOCK_TEMPLATE, $LANG_PDF,
            $_DB_dbms, $config, $LANG29;
 
-    if (empty($_USER['username']))
-    {
-        return '';
-    }
-
     $retval = '';
+
+    if( empty( $_USER['username'] ))
+    {
+        return $retval;
+    }
 
     $plugin_options = PLG_getAdminOptions();
     $num_plugins = count( $plugin_options );
@@ -2493,7 +2509,7 @@ function COM_adminMenu( $help = '', $title = '' )
         }
 
         $retval .= COM_startBlock( $title, $help,
-                           COM_getBlockTemplate( 'admin_block', 'header' ));
+                           COM_getBlockTemplate( 'admin_block', 'header', $position ));
 
         $topicsql = '';
         if( SEC_isModerator() || SEC_hasRights( 'story.edit' ))
@@ -2814,7 +2830,7 @@ function COM_adminMenu( $help = '', $title = '' )
 
         $retval .= implode('', $link_array);
 
-        $retval .= COM_endBlock( COM_getBlockTemplate( 'admin_block', 'footer' ));
+        $retval .= COM_endBlock( COM_getBlockTemplate( 'admin_block', 'footer', $position ));
     }
 
     return $retval;
@@ -3414,12 +3430,13 @@ function COM_olderStuff()
 * @param        string      $name       Logical name of block (not same as title) -- 'user_block', 'admin_block', 'section_block', 'whats_new_block'.
 * @param        string      $help       Help file location
 * @param        string      $title      Title shown in block header
+* @param        string      $position   Side, 'left', 'right' or empty.
 * @see function COM_showBlocks
 * @return   string  HTML Formated block
 *
 */
 
-function COM_showBlock( $name, $help='', $title='' )
+function COM_showBlock( $name, $help='', $title='', $position='' )
 {
     global $_CONF, $topic, $_TABLES, $_USER;
 
@@ -3441,24 +3458,24 @@ function COM_showBlock( $name, $help='', $title='' )
     switch( $name )
     {
         case 'user_block':
-            $retval .= COM_userMenu( $help,$title );
+            $retval .= COM_userMenu( $help,$title, $position );
             break;
 
         case 'admin_block':
-            $retval .= COM_adminMenu( $help,$title );
+            $retval .= COM_adminMenu( $help,$title, $position );
             break;
 
         case 'section_block':
             $retval .= COM_startBlock( $title, $help,
-                               COM_getBlockTemplate( $name, 'header' ))
+                               COM_getBlockTemplate( $name, 'header', $position ))
                 . COM_showTopics( $topic )
-                . COM_endBlock( COM_getBlockTemplate( $name, 'footer' ));
+                . COM_endBlock( COM_getBlockTemplate( $name, 'footer', $position ));
             break;
 
         case 'whats_new_block':
             if( !$_USER['noboxes'] )
             {
-                $retval .= COM_whatsNewBlock( $help, $title );
+                $retval .= COM_whatsNewBlock( $help, $title, $position );
             }
             break;
     }
@@ -3630,6 +3647,18 @@ function COM_formatBlock( $A, $noboxes = false )
             $A = DB_fetchArray($result);
         }
     }
+    
+    if( array_key_exists( 'onleft', $A ) )
+    {
+        if( $A['onleft'] == 1 )
+        {
+            $position = 'left';
+        } else {
+            $position = 'right';
+        }
+    } else {
+        $position = '';
+    }
 
     if( $A['type'] == 'portal' )
     {
@@ -3642,7 +3671,7 @@ function COM_formatBlock( $A, $noboxes = false )
 
     if( $A['type'] == 'gldefault' )
     {
-        $retval .= COM_showBlock( $A['name'], $A['help'], $A['title'] );
+        $retval .= COM_showBlock( $A['name'], $A['help'], $A['title'], $position );
     }
 
     if( $A['type'] == 'phpblock' && !$noboxes )
@@ -3657,9 +3686,9 @@ function COM_formatBlock( $A, $noboxes = false )
                 $args = $matches[2];
             }
             $blkheader = COM_startBlock( $A['title'], $A['help'],
-                    COM_getBlockTemplate( $A['name'], 'header' ));
+                    COM_getBlockTemplate( $A['name'], 'header', $position ));
             $blkfooter = COM_endBlock( COM_getBlockTemplate( $A['name'],
-                    'footer' ));
+                    'footer', $position ));
 
             if( function_exists( $function ))
             {
@@ -3707,9 +3736,9 @@ function COM_formatBlock( $A, $noboxes = false )
         $blockcontent = str_replace( array( '<?', '?>' ), '', $blockcontent );
 
         $retval .= COM_startBlock( $A['title'], $A['help'],
-                       COM_getBlockTemplate( $A['name'], 'header' ))
+                       COM_getBlockTemplate( $A['name'], 'header', $position ))
                 . $blockcontent . LB
-                . COM_endBlock( COM_getBlockTemplate( $A['name'], 'footer' ));
+                . COM_endBlock( COM_getBlockTemplate( $A['name'], 'footer', $position ));
     }
 
     return $retval;
@@ -4211,13 +4240,14 @@ function COM_emailUserTopics()
 *
 * Return the HTML that shows any new stories, comments, etc
 *
-* @param    string  $help   Help file for block
-* @param    string  $title  Title used in block header
+* @param    string  $help     Help file for block
+* @param    string  $title    Title used in block header
+* @param    string  $position Position in which block is being rendered 'left', 'right' or blank (for centre)
 * @return   string  Return the HTML that shows any new stories, comments, etc
 *
 */
 
-function COM_whatsNewBlock( $help = '', $title = '' )
+function COM_whatsNewBlock( $help = '', $title = '', $position = '' )
 {
     global $_CONF, $_TABLES, $_USER, $LANG01, $LANG_WHATSNEW, $page, $newstories;
     global $_GROUPS, $_ST_CONF;
@@ -4238,7 +4268,7 @@ function COM_whatsNewBlock( $help = '', $title = '' )
         }
     }
     $retval = COM_startBlock( $title, $help,
-                       COM_getBlockTemplate( 'whats_new_block', 'header' ));
+                       COM_getBlockTemplate( 'whats_new_block', 'header', $position ));
 
     $topicsql = '';
     if(( $_CONF['hidenewstories'] == 0 ) || ( $_CONF['hidenewcomments'] == 0 )
@@ -4474,7 +4504,7 @@ function COM_whatsNewBlock( $help = '', $title = '' )
         }
     }
 
-    $retval .= COM_endBlock( COM_getBlockTemplate( 'whats_new_block', 'footer' ));
+    $retval .= COM_endBlock( COM_getBlockTemplate( 'whats_new_block', 'footer', $position ));
     CACHE_create_instance($cacheInstance, $retval, 0);
 
     return $retval;
@@ -4950,7 +4980,9 @@ function COM_getDayFormOptions( $selected = '' )
 * Returns Option list Containing 5 years starting with current
 * unless @selected is < current year then starts with @selected
 *
-* @param        string      $selected       Selected year
+* @param        string      $selected     Selected year
+* @param        int         $startoffset  Optional (can be +/-) Used to determine start year for range of years
+* @param        int         $endoffset    Optional (can be +/-) Used to determine end year for range of years
 * @see function COM_getMonthFormOptions
 * @see function COM_getDayFormOptions
 * @see function COM_getHourFormOptions
@@ -4958,11 +4990,19 @@ function COM_getDayFormOptions( $selected = '' )
 * @return string  HTML years as option values
 */
 
-function COM_getYearFormOptions( $selected = '' )
+function COM_getYearFormOptions( $selected = '', $startoffset=0, $endoffset=5 )
 {
     $year_options = '';
+    if ($startoffset != 0)
+    {
+        $start_year = date ( 'Y' ) + $startoffset;
+    }
+    else
+    {
+        $start_year = date( 'Y', time() );
+    }
     $cur_year = date( 'Y', time() );
-    $start_year = $cur_year;
+    $finish_year = $cur_year + $endoffset;
 
     if( !empty( $selected ))
     {
@@ -4972,7 +5012,7 @@ function COM_getYearFormOptions( $selected = '' )
         }
     }
 
-    for( $i = $start_year - 1; $i <= $cur_year + 5; $i++ )
+    for( $i = $start_year - 1; $i <= $finish_year; $i++ )
     {
         $year_options .= '<option value="' . $i . '"';
 
@@ -5789,7 +5829,7 @@ function COM_makeClickableLinks( $text )
 */
 function COM_undoClickableLinks( $text )
 {
-    $text = preg_replace( '/<a href="[^"]*">([^<]*)<\/a>/', '\1', $text );
+    $text = preg_replace( '/<a href="([^"]*)">([^<]*)<\/a>/', '\1', $text );
 
     return $text;
 }
